# CS-EBOT

./: Dockerfile.i386  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: main.yml  windows-build.yml
include/: Experience.h  bot_query_hook.h  callbacks.h  clib.h  cmath.h  cmemory.h  compress.h  core.h  ebot.aps  ebot.rc  engine.h  experience.h  fast_mutex.h  glibc.h  globals.h  menu_manager.h  nav.h  netmsg.h  platform.h  query_hook.h  resource.h  rng.h  runtime.h  sse_mathfun.h  sse_mathfun_extension.h  studiohdr.h  tinythread.h
project/: CMakeLists.txt  ebot.sln  ebot.vcxproj  ebot.vcxproj.filters
source/: Experience.cpp  basecode.cpp  bot_query_hook.cpp  bot_query_hook_linux.cpp  bot_query_hook_win32.cpp  callbacks.cpp  chat.cpp  chatlib.cpp  clib.cpp  cmath.cpp  combat.cpp  control.cpp  engine.cpp  experience.cpp  globals.cpp  interface.cpp  menu_manager.cpp  navarea.cpp  navigate.cpp  navmesh.cpp  netmsg.cpp  precomp.cpp  query_hook.cpp  query_hook_win.cpp  support.cpp  tinythread.cpp  waypoint.cpp
source/goap/: attack.cpp  camp.cpp  default.cpp  defuse.cpp  destroybreakable.cpp  escape.cpp  goap.cpp  jump.cpp  pause.cpp  pickup.cpp  throwfb.cpp  throwhe.cpp  throwsm.cpp
source/ssm/: attack.cpp  blind.cpp  camp.cpp  default.cpp  defuse.cpp  destroybreakable.cpp  escape.cpp  jump.cpp  override.cpp  pause.cpp  pickup.cpp  plant.cpp  ssm.cpp  throwfb.cpp  throwhe.cpp  throwsm.cpp  usebutton.cpp
